# jetblack-serialization

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  versions.json
1.0/: 404.html  index.html
1.0/api/jetblack_serialization.iso_8601/: index.html
1.0/api/jetblack_serialization.json/: index.html
1.0/api/jetblack_serialization.xml/: index.html
1.0/user-guide/installation/: index.html
1.0/user-guide/json/: index.html
1.0/user-guide/usage/: index.html
1.0/user-guide/xml/: index.html
2.0/: 404.html  index.html
2.0/api/jetblack_serialization.json/: index.html
2.0/api/jetblack_serialization.xml/: index.html
2.0/user-guide/defaults/: index.html
2.0/user-guide/installation/: index.html
2.0/user-guide/json/: index.html
2.0/user-guide/usage/: index.html
2.0/user-guide/xml/: index.html
4.0/: index.html
4.0/api/jetblack_serialization.json/: index.html
4.0/api/jetblack_serialization.xml/: index.html
4.0/user-guide/configuration/: index.html
4.0/user-guide/defaults/: index.html
4.0/user-guide/json/: index.html
4.0/user-guide/usage/: index.html
4.0/user-guide/xml/: index.html
4.0/user-guide/yaml/: index.html
docs/: 404.html  index.html  sitemap.xml
docs/api/jetblack_serialization.iso_8601/: index.html
docs/api/jetblack_serialization.json/: index.html
docs/api/jetblack_serialization.xml/: index.html
docs/api/jetblack_serialization.yaml/: index.html
docs/search/: search_index.json
docs/user-guide/: xml.md
docs/user-guide/configuration/: index.html
docs/user-guide/defaults/: index.html
docs/user-guide/installation/: index.html
docs/user-guide/json/: index.html
docs/user-guide/usage/: index.html
docs/user-guide/xml/: index.html
docs/user-guide/yaml/: index.html
documentation/: index.md
documentation/api/: jetblack_serialization.iso_8601.md  jetblack_serialization.json.md  jetblack_serialization.xml.md  jetblack_serialization.yaml.md
documentation/css/: custom.css
documentation/user-guide/: configuration.md  defaults.md  installation.md  json.md  usage.md  xml.md  yaml.md
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py
jetblack_serialization/: __init__.py  annotations.py  config.py  custom_annotations.py  types.py  typing_inspect_ex.py  utils.py
jetblack_serialization/iso_8601/: __init__.py  date_time.py  duration.py
jetblack_serialization/json/: __init__.py  annotations.py  config.py  serialization.py  typed_deserializer.py  typed_serializer.py  untyped_deserializer.py  untyped_serializer.py
jetblack_serialization/xml/: __init__.py  annotations.py  config.py  deserializer.py  serialization.py  serializer.py  typed_deserializer.py  typed_serializer.py  typed_xml_deserializer.py  typed_xml_serializer.py  untyped_deserializer.py  untyped_serializer.py  untyped_xml_deserializer.py  untyped_xml_serializer.py
jetblack_serialization/yaml/: __init__.py  config.py  serialization.py  typed_deserializer.py  typed_serializer.py  types.py  untyped_deserializer.py  untyped_serializer.py
src/jetblack_serialization/: __init__.py  config.py  custom_annotations.py  types.py  typing_ex.py  utils.py
src/jetblack_serialization/json/: __init__.py  annotations.py  config.py  encoding.py  serialization.py  typed_deserializer.py  typed_serializer.py  untyped_deserializer.py  untyped_serializer.py
src/jetblack_serialization/xml/: __init__.py  annotations.py  config.py  encoding.py  serialization.py  typed_deserializer.py  typed_serializer.py  untyped_deserializer.py  untyped_serializer.py
src/jetblack_serialization/yaml/: __init__.py  config.py  encoding.py  serialization.py  typed_deserializer.py  typed_serializer.py  untyped_deserializer.py  untyped_serializer.py
stable/api/jetblack_serialization.iso_8601/: index.html
stable/api/jetblack_serialization.json/: index.html
stable/user-guide/defaults/: index.html
tests/: test_custom_annotations.py  test_typing_ex.py  test_typing_inspect_ex.py
tests/iso_8601/: test_date_time.py  test_duration.py
tests/json/: config.py  test_any.py  test_config.py  test_default_factory.py  test_dict_in_typed.py  test_forward_refs.py  test_literal.py  test_required.py  test_typed_deserializer.py  test_typed_serializer.py  test_unions.py  test_untyped_deserializer.py  test_untyped_serializer.py
tests/xml/: config.py  test_deserializer.py  test_partial_annotation.py  test_serialization.py  test_serializer.py  test_typed_deserializer.py  test_typed_serializer.py  test_typed_xml_serializer.py  test_untyped_deserialization.py  test_untyped_serialization.py  test_untyped_xml_deserialization.py  test_untyped_xml_serialization.py  test_xml_serialization.py
tests/yaml/: config.py  test_typed_deserializer.py  test_typed_serializer.py
(+5 files in other folders)
