[tool.poetry]
name = "jetblack-serialization"
version = "3.0.1"
description = "Serialization for JSON and XML using typing"
repository = "https://github.com/rob-blackbourn/jetblack-serialization"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['serialization', 'jetblack', 'json', 'xml', 'typing']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "jetblack_serialization" }
]

[tool.poetry.dependencies]
python = "^3.7"
jetblack-iso8601 = "^1.0"
lxml = "^4.9"
typing-extensions = "^4"
typing_inspect = "^0.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1"
mypy = "^0.971"
pylint = "^2"
pytest = "^7"
pytest-runner = "^6"
stringcase = "^1.2.0"
lxml-stubs = "^0.2.0"
jetblack-markdown = "^1.0.1"
mkdocs = "^1.3"
mkdocs-material = "^8.5"
mike = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
