[tool.poetry]
name = "jetblack-serialization"
version = "4.0.0-alpha.0"
description = "Serialization for JSON and XML using typing"
repository = "https://github.com/rob-blackbourn/jetblack-serialization"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['serialization', 'jetblack', 'json', 'xml', 'typing']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "jetblack_serialization" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
jetblack-iso8601 = "^1.0.2"
lxml = { version = "^5.2.2", optional = true }
pyyaml = { version = "^6.0.1", optional = true }
typing-extensions = "^4"
typing-inspect = "^0.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
pylint = "^3"
pytest = "^8"
stringcase = "^1.2.0"
lxml-stubs = "^0.5.1"
jetblack-markdown = "^1.2.0"
mkdocs = "^1.6"
mkdocs-material = "^9.5.30"
mike = "^2.1.2"
types-pyyaml = "^6.0.12.20240724"

[tool.poetry.extras]
xml = [ "lxml" ]
yaml = [ "pyyaml" ]
all = [ "lxml", "pyyaml" ]

[build-system]
requires = ["poetry>=1.6"]
build-backend = "poetry.masonry.api"
